# 101-Demo

./: .cursorindexingignore  .dockerignore  README.md  docker-compose.yml
.cursor/agents/: code-quality-reviewer.md
.cursor/commands/: create-implementation-checklist-lite.md  create-implementation-checklist.md  do-ticket.md  parrallel-guidance.md  work-through-implemention-checklist.md
.cursor/plans/: polygon_to_yfinance_migration_3c0dcbc7.plan.md
.cursor/rules/: correct-mermaid-charts.mdc  system-design-guidance.mdc
.cursor/skills/lint-and-fix/: SKILL.md
.github/workflows/: cursor-code-review.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/.cursor/rules/: backend.mdc
backend/src/app/: __init__.py  cache.py  config.py  main.py  polygon.py  yfinance_client.py
docs/: jira-ticket.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
frontend/.cursor/rules/: frontend.mdc
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: copyable-field.tsx  financials.tsx  market-snapshot.tsx  prominent-price-display.tsx  stat.tsx  stock-chart.tsx  ticker-form.tsx  ticker-overview.tsx
frontend/components/ui/: animated-counter.tsx  pricing-tab.tsx  stagger-container.tsx  tabs.tsx
salesforce_app/: README.md  biome.json  env.example  package.json  pnpm-lock.yaml  tsconfig.node.json
salesforce_app/server/: config.ts  index.ts
salesforce_app/server/routes/: auth.ts  salesforce.ts
salesforce_app/server/salesforce/: client.ts
salesforce_app/src/: App.tsx
(+11 files in other folders)
